--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -37,7 +37,7 @@ body {
   width: 100%;
   min-height: 100%;
   background-color: var(--frame-bg);
-  transition: background-color 0.3s;
+  transition: background-color var(--trans-time-color);
 }
 
 h1,
@@ -46,20 +46,24 @@ h3,
 h4,
 h5,
 h6,
+li,
 p,
+strong,
+i,
+time,
 span {
-  transition: color 0.3s;
+  transition: color var(--trans-time-color);
 }
 
 path,
 rect,
 circle {
-  transition: fill 0.3s;
+  transition: fill var(--trans-time-color);
 }
 
 .page-bg {
   background: var(--page-bg);
-  transition: background-color 0.3s;
+  transition: background-color var(--trans-time-color);
 }
 
 .side-padding {
