--- a/portfolio2023_vite/src/scss/pageHeader.scss
+++ b/portfolio2023_vite/src/scss/pageHeader.scss
@@ -42,7 +42,7 @@
   width: rem(48px);
   height: rem(48px);
   border-radius: rem(8px);
-  transition: background-color 0.3s;
+  transition: background-color var(--trans-time-color);
 
   .header-icon {
     path,
