--- a/portfolio2023_vite/src/scss/pageFooter.scss
+++ b/portfolio2023_vite/src/scss/pageFooter.scss
@@ -77,7 +77,7 @@
     rect {
       fill: var(--footer-icon);
     }
-    &:hover {
+    &.hover {
       span {
         color: var(--footer-btn-hover);
       }
