--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -3,6 +3,7 @@
   --ms-50: 0.05s;
   --ms-100: 0.1s;
   --ms-200: 0.2s;
+  --ms-300: 0.2s;
   --ms-400: 0.4s;
   --ms-600: 0.6s;
   --ms-800: 0.8s;
@@ -14,7 +15,7 @@
   --screen-size-x: 1920px;
   --screen-size-y: 927px;
   --header-height: 208px;
-  --trans-time-color: var(--ms-400);
+  --trans-time-color: var(--ms-300);
   --trans-time-cursor: var(--ms-400);
   --trans-time-move: var(--ms-800);
 
@@ -38,7 +39,7 @@
   // page header
   --time-bar: #707070;
   --time-text: #909090;
-  --gnb-menu: #909090;
+  --gnb-menu: #bfbfbf;
   --gnb-menu-hover: #5a5a5a;
   --gnb-menu-selected: #3a3a3a;
   --header-icon: #707070;
@@ -89,7 +90,7 @@
   --tools: #ccc;
 
   // projects
-  --proj-border: #3a3a3a;
+  --proj-border: #ccc;
   --proj-bg-hover: #efefef;
   --proj-title: #5a5a5a;
   --proj-period: #bfbfbf;
@@ -108,7 +109,7 @@
     --cursor: #fff;
 
     // scrollbar
-    --scroll-thumb: rgba(63, 63, 63, 0.6);
+    --scroll-thumb: rgba(90, 90, 90, 0.6);
 
     // page background
     --frame-bg: #141414;
