--- a/portfolio2023_vite/src/scss/profile.scss
+++ b/portfolio2023_vite/src/scss/profile.scss
@@ -11,9 +11,9 @@
 .intro-section {
   h2 {
     margin-bottom: rem(160px);
-    font-size: rem(64px);
     font-weight: 300;
-    line-height: rem(80px);
+    font-size: rem(48px);
+    line-height: rem(64px);
     color: var(--intro-title);
     strong {
       font-weight: 500;
@@ -21,10 +21,20 @@
     }
   }
   p {
-    font-size: rem(32px);
+    font-size: rem(24px);
+    line-height: rem(40px);
     font-weight: 400;
-    line-height: rem(56px);
     color: var(--intro-desc);
+  }
+  @media only screen and (min-width: 1024px) {
+    h2 {
+      font-size: rem(64px);
+      line-height: rem(80px);
+    }
+    p {
+      font-size: rem(32px);
+      line-height: rem(56px);
+    }
   }
 }
 
@@ -32,15 +42,21 @@
   h2 {
     margin-bottom: rem(80px);
     font-size: rem(40px);
-    font-weight: 700;
     line-height: rem(40px);
+    font-weight: 700;
     color: var(--section-header-title);
   }
   p {
-    font-size: rem(64px);
+    font-size: rem(48px);
+    line-height: rem(64px);
     font-weight: 300;
-    line-height: rem(80px);
     color: var(--section-header-desc);
+  }
+  @media only screen and (min-width: 1024px) {
+    p {
+      font-size: rem(64px);
+      line-height: rem(80px);
+    }
   }
 }
 
