페이지 전환 작업중

--- a/portfolio2023_vite/src/scss/page_transition.scss
+++ b/portfolio2023_vite/src/scss/page_transition.scss
@@ -2,15 +2,18 @@
 @import "./scss_global";
 
 .transition-wrapper {
-  overflow: hidden;
+  // overflow: hidden;
 }
 .transition-container {
 }
 
 // 기존 페이지
 .page-exit {
+  position: absolute;
+  transition: opacity 1s;
 }
 .page-exit-active {
+  opacity: 0;
 }
 .page-exit-done {
 }
