--- a/portfolio2023_vite/src/scss/pageVisual.scss
+++ b/portfolio2023_vite/src/scss/pageVisual.scss
@@ -9,6 +9,9 @@
   @media only screen and (min-width: 1024px) {
     --title-size: #{rem(240px)};
   }
+  .page-title {
+    margin-bottom: rem(240px);
+  }
 
   .page-title-text {
     font-size: var(--title-size);
