패럴랙스 작업중

--- a/portfolio2023_vite/src/scss/pageVisual.scss
+++ b/portfolio2023_vite/src/scss/pageVisual.scss
@@ -10,7 +10,7 @@
     --title-size: #{rem(240px)};
   }
   .page-title {
-    margin-bottom: rem(240px);
+    // margin-bottom: rem(240px);
   }
 
   .page-title-text {
