--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -5,8 +5,13 @@
   cursor: none !important;
 }
 
-html {
+html,
+body {
   width: 100%;
+  height: 100%;
+}
+
+html {
   // font-size: 1vw;
   font-size: 10px;
 
@@ -19,22 +24,9 @@ html {
     // font-size: 2vw;
     font-size: 1vw;
   }
-
-  overflow: overlay;
-  &::-webkit-scrollbar {
-    width: 24px;
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: 12px;
-    border: 8px solid transparent;
-    background: var(--scroll-thumb);
-    background-clip: padding-box;
-  }
 }
 
 body {
-  width: 100%;
-  min-height: 100%;
   background-color: var(--frame-bg);
   transition: background-color var(--trans-time-color);
 }
@@ -64,6 +56,47 @@ path,
 rect,
 circle {
   transition: fill var(--trans-time-color);
+}
+
+$parallax-deep: 300px;
+
+.parallax-frame {
+  perspective: $parallax-deep;
+}
+.parallax-section {
+  transform-style: preserve-3d;
+  position: relative;
+}
+.parallax-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+@for $level from 1 to 6 {
+  $end: 7 - $level;
+  $depth-dist: $parallax-deep * $level * -1;
+  $depth-scale: calc(($parallax-deep - $depth-dist) / $parallax-deep);
+  .parallax-depth-#{$level} {
+    transform: translateZ($depth-dist) scale($depth-scale);
+  }
+}
+
+.page-container {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: overlay;
+  &::-webkit-scrollbar {
+    width: 24px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    border: 8px solid transparent;
+    background: var(--scroll-thumb);
+    background-clip: padding-box;
+  }
 }
 
 .page-bg {
