--- a/portfolio2023_vite/src/scss/page_transition.scss
+++ b/portfolio2023_vite/src/scss/page_transition.scss
@@ -1,25 +1,29 @@
 @import "./css_variable";
 @import "./scss_global";
 
-.transition-wrapper {
+.transitions-wrapper {
   // overflow: hidden;
 }
 .transition-container {
+  // position: absolute;
+  // top: 0;
 }
 
 // 기존 페이지
 .page-exit {
-  position: absolute;
-  transition: opacity 1s;
+  z-index: 0;
+  // position: absolute;
+  // transition: opacity 1s;
 }
 .page-exit-active {
-  opacity: 0;
+  // opacity: 0;
 }
 .page-exit-done {
 }
 
 // 이동된 페이지
 .page-enter {
+  z-index: 5;
 }
 .page-enter-active {
 }
