--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -82,10 +82,15 @@ $parallax-deep: 300px;
     transform: translateZ($depth-dist) scale($depth-scale);
   }
 }
-
 .page-container {
   width: 100%;
   height: 100%;
+  // overflow-x: hidden;
+  // overflow-y: auto;
+  // }
+  // .scroll-container {
+  // width: 100%;
+  // height: 100%;
   overflow-x: hidden;
   overflow-y: overlay;
   &::-webkit-scrollbar {
@@ -117,16 +122,11 @@ $parallax-deep: 300px;
     weight: 400;
     family: "Noto Serif KR";
   }
-
   color: transparent;
 }
 
 .page-title-filled-text {
   font-weight: 700;
-}
-
-.page-contents-container {
-  margin-top: calc(var(--header-height) * -1);
 }
 
 .page-section {
