페이지 별 섹션 offset 구조 작업중 build update

--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -111,6 +111,7 @@ circle {
   transition: background-color var(--trans-time-color);
   position: relative;
   &.intro-section {
+    padding-top: 0;
     background: var(--intro-grad-from);
     background: linear-gradient(
       0deg,
