--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -3,6 +3,10 @@
 
 * {
   cursor: none !important;
+  ::selection {
+    background: var(--selection-bg);
+    color: var(--selection-text);
+  }
 }
 
 html,
