--- a/portfolio2023_vite/src/scss/pageVisual.scss
+++ b/portfolio2023_vite/src/scss/pageVisual.scss
@@ -10,30 +10,30 @@
     --title-size: #{rem(240px)};
   }
   .page-title {
-    margin-bottom: rem(240px);
+    // margin-bottom: rem(240px);
   }
 
   .page-title-text {
     font-size: var(--title-size);
     line-height: var(--title-size);
-    transform: translateY(50%);
-    opacity: 0;
-    transition-property: transform, opacity;
-    transition-duration: 3s;
-    &.loaded {
-      transform: translateY(0);
-      opacity: 1;
-    }
+    // transform: translateY(50%);
+    // opacity: 0;
+    // transition-property: transform, opacity;
+    // transition-duration: 3s;
+    // &.loaded {
+    //   transform: translateY(0);
+    //   opacity: 1;
+    // }
   }
 
   .page-title-border-text {
     -webkit-text-stroke: 1px var(--page-title-border);
-    transition-timing-function: var(--trans-func-expo);
+    // transition-timing-function: var(--trans-func-expo);
   }
 
   .page-title-filled-text {
     color: var(--page-title-filled);
-    transition-timing-function: var(--trans-func-expo);
-    transition-delay: 0.48s;
+    // transition-timing-function: var(--trans-func-expo);
+    // transition-delay: 0.48s;
   }
 }
